--- a/bobsBagels.css
+++ b/bobsBagels.css
@@ -11,9 +11,42 @@
 
 #bigImage {
     width: 100%;
-    height:100%;
-    margin: 0;
-    padding: 0;
+    height:500px;
+    margin: 0px;
+    padding: 100px;
     /* background-image: url('images/bagels.jpg'); */
     background-size: cover;
 }
+#testOnImage{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(0, 0, 0);
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+}
+.navbar-brand{
+    width: 20px;
+    height: 20px;
+    
+
+}
+
+#content{
+    max-width: 90%;
+    display: flex;
+    align-items: center;
+}
+
+#leftSide{    
+    flex: 1;
+    max-width: 50%;
+}
+
+#rightSide{
+    flex: 1;
+    max-width: 50%;
+}
+
